Added Tests
Refer to: https://github.com/NiasSt90/jaxb-bug1135

Signed-off-by: Lin Gao <lgao@redhat.com>