@@ -89,6 +89,7 @@
                     <argLine>
                         --add-opens org.glassfish.jaxb.runtime/com.sun.xml.bind.v2=java.xml.bind
                         --add-opens org.glassfish.jaxb.runtime/com.sun.xml.bind.v2.schemagen=java.xml.bind
+                        --add-opens org.glassfish.jaxb.runtime/com.sun.xml.bind.v2.schemagen.xmlidref=java.xml.bind
                     </argLine>
                 </configuration>
             </plugin>
